Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-8424

osd_object.c:1330:22: error: 'DN_MAX_BONUSLEN' undeclared (first use in this function) DMU_OT_SA, DN_MAX_BONUSLEN, tx);

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.10.0
    • Lustre 2.8.0
    • None
    • 3
    • 9223372036854775807

      Attempts to build CORAL prototype zfs with Lustre 2.8 fails with:

      CC:            gcc
      LD:            /usr/bin/ld -m elf_x86_64
      CPPFLAGS:      -include /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/undef.h -include /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/config.h -I/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/libcfs/include -I/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lnet/include -I/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/include 
      CFLAGS:        -g -O2 -Werror -Wall -Werror
      EXTRA_KCFLAGS: -include /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/undef.h -include /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/config.h  -g -I/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/libcfs/include -I/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lnet/include -I/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/include
      
      Type 'make' to build Lustre.
      + make -s
      Making all in .
      /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs/osd_object.c: In function '__osd_object_create':
      /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs/osd_object.c:1286:22: error: 'DN_MAX_BONUSLEN' undeclared (first use in this function)
                 DMU_OT_SA, DN_MAX_BONUSLEN, tx);
                            ^
      /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs/osd_object.c:1286:22: note: each undeclared identifier is reported only once for each function it appears in
      /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs/osd_object.c: In function '__osd_zap_create':
      /tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs/osd_object.c:1330:22: error: 'DN_MAX_BONUSLEN' undeclared (first use in this function)
                 DMU_OT_SA, DN_MAX_BONUSLEN, tx);
                            ^
      make[7]: *** [/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs/osd_object.o] Error 1
      make[6]: *** [/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre/osd-zfs] Error 2
      make[5]: *** [/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0/lustre] Error 2
      make[4]: *** [_module_/tmp/rpmbuild-lustre--vGTBA8K3/BUILD/lustre-2.8.0] Error 2
      make[3]: *** [modules] Error 2
      make[2]: *** [all-recursive] Error 1
      make[1]: *** [all] Error 2
      error: Bad exit status from /tmp/rpmbuild-lustre--vGTBA8K3/TMP/rpm-tmp.ffGn9W (%build)
          Bad exit status from /tmp/rpmbuild-lustre--vGTBA8K3/TMP/rpm-tmp.ffGn9W (%build)
      
      
      RPM build errors:
      make: *** [rpms] Error 1
      

            utopiabound Nathaniel Clark
            jsalians_intel John Salinas (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: